--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest"  type="image/x-icon"href="../src/assets/faviconn.png" />
 
-    <title>SpaceX App</title>
+    <title>SpaceX Information</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
